language/move-lang/tests/move_check/typing/mutate_resource.exp
error: 

   ┌── tests/move_check/typing/mutate_resource.move:5:10 ───
   │
 5 │         *r = R {};
   │          ^ Invalid mutation. Mutation requires the 'drop' ability as the old value is destroyed
   ·
 4 │     fun t0(r: &mut R) {
   │                    - The type '0x8675309::M::R' does not have the ability 'drop'
   ·
 2 │     struct R {}
   │            - To satisify the constraint, the 'drop' ability would need to be added here
   │

error: 

   ┌── tests/move_check/typing/mutate_resource.move:9:10 ───
   │
 9 │         *r = x;
   │          ^ Invalid mutation. Mutation requires the 'drop' ability as the old value is destroyed
   ·
 8 │     fun t1<T>(r: &mut T, x: T) {
   │                       - The type 'T' does not have the ability 'drop'
   ·
 8 │     fun t1<T>(r: &mut T, x: T) {
   │            - To satisify the constraint, the 'drop' ability would need to be added here
   │

error: 

    ┌── tests/move_check/typing/mutate_resource.move:13:10 ───
    │
 13 │         *r = x;
    │          ^ Invalid mutation. Mutation requires the 'drop' ability as the old value is destroyed
    ·
 12 │     fun t2<T: key>(r: &mut T, x: T) {
    │                            - The type 'T' does not have the ability 'drop'
    ·
 12 │     fun t2<T: key>(r: &mut T, x: T) {
    │            - To satisify the constraint, the 'drop' ability would need to be added here
    │

